fix: update general files to manage overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~primeicons/primeicons.css';
+
+html, body {
+    max-width: 100% !important;
+    overflow-x: hidden !important;
+}
